...
enum UpcomingGroup: Int, CaseIterable {
    case laterToday, tomorrow, sevenDays, fourteenDays, thirtyDays, future

    var title: String {
        switch self {
        case .laterToday: "Later today"
        case .tomorrow: "Tomorrow"
        case .sevenDays: "Next 7 days"
        case .fourteenDays: "Next 2 weeks"
        case .thirtyDays: "Next 30 days"
        case .future: "Future"
        }
    }
...
